<resources>
    <string name="app_name">Cryptopix</string>
    <string name="app_id">ca-app-pub-1564378525627449~8523022192</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="PRODUCTION_AD_UNIT_ID">ca-app-pub-1564378525627449/6136246594</string>

    <string name="main_activity_title">Cryptopix</string>
    <string name="encode_message_activity_title">Inject Secret Data</string>

    <string name="init_main_imageview_content_desc">Open an image</string>

    <string name="main_menu_add_picture_title">Select Image</string>
    <string name="main_menu_take_picture_title">Take Photo</string>
    <string name="main_menu_dark_mode">Dark Mode</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="encode_secret_dialog">This image does not contain a secret message. Do you want to add one?</string>
    <string name="decode_secret_dialog">This image contains a secret message. Do you want to extract it?</string>
    <string name="unsupported_algorithm_dialog">This image contains a secret message, but your device cannot decode it. Do you want to encode a new message?</string>
    <string name="corrupted_image_dialog">This image contains a corrupted secret message. Do you want to encode a new message?</string>

    <string name="default_filename_textview">No file selected</string>
    <string name="select_file_button">Select File</string>
    <string name="add_password_checkbox">Encrypt file with password</string>
    <string name="compress_file_checkbox">Compress file</string>
    <string name="save_file_button">Save File</string>
    <string name="send_file_button">Send File</string>

    <string name="set_password_dialog_title">Set a password</string>
    <string name="set_password_dialog_hint">Enter a password</string>

    <string name="enter_password_decode_dialog_title">Enter a password</string>
    <string name="enter_password_decode_dialog_hint">Enter a password</string>
    <string name="enter_password_decode_dialog_message">This secret data is encrypted with a password.</string>

</resources>
