<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:title="@string/encode_message_activity_title"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <TextView
            android:id="@+id/filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_filename_textview"
            android:textSize="16sp" />

        <Button
            android:id="@+id/select_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_file_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/add_password_checkbox"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/compress_file_checkbox"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_file_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="@string/ad_unit_id" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>